--- a/public/selecting-number.html
+++ b/public/selecting-number.html
@@ -55,7 +55,7 @@
               href="#!">Документы</a>
           </li>
         </ul>
-        <a class="gray-btn__lg" href="#!">Заказать звонок</a>
+        <a class="gray-btn__lg open-modal-btn" href="#!">Заказать звонок</a>
       </div>
       <div class="flex items-center justify-between text-sm xl:max-w-[1388px] mx-auto xl:px-0 px-5">
         <button class="open-menu__btn flex items-center md:gap-2.5 md:w-[175px]">
