--- a/public/selecting-number-two.html
+++ b/public/selecting-number-two.html
@@ -55,7 +55,7 @@
               href="#!">Документы</a>
           </li>
         </ul>
-        <a class="gray-btn__lg" href="#!">Заказать звонок</a>
+        <a class="gray-btn__lg open-modal-btn" href="#!">Заказать звонок</a>
       </div>
       <div class="flex items-center justify-between text-sm xl:max-w-[1388px] mx-auto xl:px-0 px-5">
         <button class="open-menu__btn flex items-center md:gap-2.5 md:w-[175px]">
@@ -763,7 +763,7 @@
   </div>
 
   <div class="modal bg-[#00000099] items-center justify-center fixed top-0 left-0 w-full h-full z-[299] hidden">
-    <div class="relative">
+    <div class="relative max-w-[576px] flex items-center justify-center modal-content">
       <button class="absolute top-0 z-[100] right-[-35px] close-modal-btn">
         <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <line x1="1.01709" y1="18.2758" x2="18.2929" y2="0.999991" stroke="#B99984" stroke-linecap="round"></line>
